--- a/2022/02/10-14-50.md
+++ b/2022/02/10-14-50.md
@@ -7,7 +7,7 @@ Finished: 15:55
 | --- | --- | --- |
 | Pull down (over hand grip, 1.5x shoulder width) |  17 | 41 kg |
 | Pull down (over hand grip, 1.5x shoulder width) | 12 | 46 kg |
-| Pull down (over hand grip, 1.5x shoulder width) | | 50 kg |
+| Pull down (over hand grip, 1.5x shoulder width) | 10 | 50 kg |
 | Barbell Rows | 12 | 20 kg |
 | Barbell Rows | 11 | 30 kg |
 | Barbell Rows | 12 | 40 kg |
