:bug: Fix missing weight

--- a/2022/02/15-16-45.md
+++ b/2022/02/15-16-45.md
@@ -7,7 +7,7 @@ Finished: 17:44
 | Exercise | Reps | Weight
 | --- | --- | --- |
 | Reverse Peck Deck | 12 | 36 kg |
-| Reverse Peck Deck | 12 | kg |
+| Reverse Peck Deck | 12 | 36 kg |
 | Reverse Peck Deck | 10 | 36 kg |
 | Reverse Peck Deck | 11 | 30 kg |
 | Side Lateral Raise | 12 | 2 * 6 kg |
